--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,76 @@
 <resources>
     <string name="app_name">Shopphile</string>
+
+
+    <!--product names -->
+    <string-array name="product_names">
+        <item>Wireless Bluetooth Headphones</item>
+        <item>Smartphone with AMOLED Display</item>
+        <item>Fitness Tracker Smartwatch</item>
+        <item>Laptop with Intel i7 Processor</item>
+        <item>Portable Power Bank 20000mAh</item>
+        <item>Smart LED TV 55-inch</item>
+        <item>Gaming Mechanical Keyboard</item>
+        <item>Noise-Cancelling Over-Ear Headphones</item>
+        <item>Ultra-HD Action Camera</item>
+        <item>Wireless Charging Pad</item>
+    </string-array>
+
+    <!--product prices -->
+    <string-array name="product_prices">
+        <item>₱1,499.00</item>
+        <item>₱12,999.00</item>
+        <item>₱2,499.00</item>
+        <item>₱45,999.00</item>
+        <item>₱899.00</item>
+        <item>₱29,999.00</item>
+        <item>₱3,199.00</item>
+        <item>₱5,499.00</item>
+        <item>₱8,999.00</item>
+        <item>₱799.00</item>
+    </string-array>
+
+
+    <!--order id -->
+    <string-array name="order_id">
+        <item>0000001</item>
+        <item>0000002</item>
+        <item>0000003</item>
+        <item>0000004</item>
+        <item>0000005</item>
+        <item>0000006</item>
+        <item>0000007</item>
+        <item>0000008</item>
+        <item>0000009</item>
+        <item>0000010</item>
+    </string-array>
+
+    <!--order dates-->
+    <string-array name="order_date">
+        <item>08/20/24</item>
+        <item>09/22/24</item>
+        <item>10/23/24</item>
+        <item>12/31/24</item>
+        <item>09/20/24</item>
+        <item>09/21/24</item>
+        <item>09/20/24</item>
+        <item>10/17/23</item>
+        <item>07/12/24</item>
+        <item>09/24/24</item>
+    </string-array>
+
+    <!--product images -->
+    <string-array name="product_images">
+        <item>@drawable/wireless_bluetooth_headphones</item>
+        <item>@drawable/smartphone_amoled</item>
+        <item>@drawable/fitness_smart_watch</item>
+        <item>@drawable/laptop</item>
+        <item>@drawable/power_bank</item>
+        <item>@drawable/tv_55inch</item>
+        <item>@drawable/mechanical_keyboard</item>
+        <item>@drawable/noise_canceling_headphone</item>
+        <item>@drawable/action_camera</item>
+        <item>@drawable/wireless_charging_pad</item>
+    </string-array>
+
 </resources>
